cluster/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /prefect
        backend:
          service:
            name: prefect-server
            port:
              number: 4200
      # - pathType: Prefix
      #   path: /bar(/|$)(.*)
      #   backend:
      #     service:
      #       name: bar-service
      #       port:
      #         number: 8080
